# spin-trigger-kinesis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  article-draft.md  kinesis.wit  release-process.md  spin-pluginify.toml
.github/workflows/: build.yml
guest/: .gitignore  Cargo.toml  spin.toml
guest/src/: lib.rs
guest_rust/: Cargo.toml  spin.toml
sdk/: Cargo.toml
sdk/macro/: Cargo.toml
sdk/macro/src/: lib.rs
sdk/src/: lib.rs
src/: aws.rs  lib.rs  main.rs
templates/kinesis-rust/content/: Cargo.toml.tmpl  spin.toml
templates/kinesis-rust/content/src/: lib.rs
templates/kinesis-rust/metadata/: spin-template.toml
templates/metadata/: spin-template.toml
