[package]
name = "spin-kinesis-sdk"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = "1.78"
include = ["../kinesis.wit"]

[lib]
name = "spin_kinesis_sdk"

[dependencies]
spin-executor = "3.0"
spin-kinesis-macro = { path = "macro" }
wit-bindgen = { workspace = true }